--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="./files/reset.css?_v=20221221114246" />
-  <link rel="stylesheet" href="./css/style.min.css?_v=20221221114246">
+  <link rel="stylesheet" href="./files/reset.css" />
+  <link rel="stylesheet" href="./css/style.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,700&family=Montserrat:wght@400;700&display=swap&_v=20221221114246" rel="stylesheet">
   <title>Step project 2</title>
 </head>
